--- a/index.html
+++ b/index.html
@@ -7,43 +7,91 @@
     <meta name="author" content="Adrian Boisclair">
     <meta name="viewport" http-equiv="Content-Type" content="width=device-width, initial-scale=1">
     <title></title>
+    <link href='http://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="assets/css/reset.css">
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
 <div class="wrapper">
     <header class="nav-bar">
-
+        <div class="container flex-container" id="nav-nav-bar">
+            <div class="logo">Paris Vacations</div>
+            <a href="#">Home</a>
+            <a href="#">About</a>
+            <a href="#">Blog</a>
+            <a href="#">Store</a>
+            <a href="#">Forum</a>
+        </div>
     </header>
     <main>
         <section class="module parallax parallax-1">
             <div class="container">
-                <h1>Paris</h1>
+                <!--<h1>Paris</h1>-->
+            </div>
+        </section>
+        <section class="module content">
+            <div class="flex-container tag-line">
+                <div class="wrap">
+                    <h2>Your Dream Vacation</h2>
+                    <a class="link-btn" href="#">Book Today</a>
+                </div>
+            </div>
+        </section>
+        <section class="wrapper">
+            <div class="flex-container flex-wrap">
+                <article id="article-1">
+                    <h1>
+                        Article Header
+                    </h1>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci, amet, aspernatur, consequatur
+                        corporis excepturi explicabo maiores numquam officiis perferendis praesentium saepe soluta tenetur
+                        velit. Dolores eos ipsa neque sint temporibus!</p>
+                </article>
+                <article id="article-2">
+                    <h1>
+                        Article Header
+                    </h1>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci, amet, aspernatur, consequatur
+                        corporis excepturi explicabo maiores numquam officiis perferendis praesentium saepe soluta tenetur
+                        velit. Dolores eos ipsa neque sint temporibus!</p>
+                </article>
+                <article id="article-3">
+                    <h1>
+                        Article Header
+                    </h1>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci, amet, aspernatur, consequatur
+                        corporis excepturi explicabo maiores numquam officiis perferendis praesentium saepe soluta tenetur
+                        velit. Dolores eos ipsa neque sint temporibus!</p>
+                </article>
+                <article id="article-4">
+                    <h1>
+                        Article Header
+                    </h1>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci, amet, aspernatur, consequatur
+                        corporis excepturi explicabo maiores numquam officiis perferendis praesentium saepe soluta tenetur
+                        velit. Dolores eos ipsa neque sint temporibus!</p>
+                </article>
             </div>
         </section>
         <section class="module content">
             <div class="container">
                 <h2>Lorem Ipsum Dolor</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nihil consequuntur, nesciunt dicta, esse
-                    rem ducimus itaque quis. Adipisci ullam nam qui illum debitis sit ad in delectus, repudiandae non
-                    dolorum! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Suscipit veritatis, facere
-                    aliquid itaque tempore consequatur nihil sint enim aliquam id saepe magnam totam repellat placeat a
-                    fugit nulla molestias voluptas.</p>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Soluta cum distinctio eum asperiores rem
-                    enim fugit eaque voluptas est laboriosam in repudiandae architecto placeat, illum atque quasi
-                    explicabo, culpa, molestias!Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit
-                    voluptas, aperiam quae provident, recusandae rem quis. Ut quaerat, quasi iste voluptate et dolorem
-                    atque sed neque voluptates, molestias dolor enim!</p>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nam odit tempore, quibusdam impedit
-                    deserunt. Natus quisquam, facilis numquam, molestias nesciunt modi, at debitis maxime sunt et quo
-                    quas labore perferendis.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Unde delectus
-                    laborum doloremque recusandae, debitis maxime a! Nihil distinctio ex, cumque tempore ea voluptas
-                    omnis odit, quaerat natus nam excepturi corporis!</p>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eaque eius harum atque unde nihil aut quam
-                    provident sunt, iste error vitae suscipit dolores cupiditate totam, eum quae alias! Dicta,
-                    nisi.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptate beatae impedit officia quis
-                    odit rerum sequi, explicabo commodi illum suscipit, tempore eum doloremque quae obcaecati tempora
-                    quidem neque sapiente modi?</p>
+
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus aspernatur assumenda, aut beatae
+                    ducimus eum fugiat, id impedit minus quos rerum tenetur unde veniam! Amet libero molestiae numquam
+                    voluptate voluptates.</p>
+
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut beatae consectetur consequuntur dolor
+                    dolorem eligendi harum ipsum labore natus neque nulla, obcaecati odit officiis omnis placeat quasi
+                    rem vel voluptatum!</p>
+
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. At, dolores enim, esse eveniet excepturi
+                    labore nobis provident quibusdam quidem quis reiciendis repellendus, reprehenderit rerum suscipit
+                    vitae voluptatem voluptates. Culpa, quaerat?</p>
+
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad adipisci asperiores cum debitis
+                    dignissimos dolores, dolorum esse excepturi impedit inventore minus obcaecati perferendis quasi
+                    recusandae sequi sunt suscipit totam veniam!</p>
             </div>
         </section>
     </main>
