--- a/index.html
+++ b/index.html
@@ -40,36 +40,36 @@
         <section class="wrapper">
             <div class="flex-container flex-wrap">
                 <article id="article-1">
-                    <h1>
-                        Article Header
-                    </h1>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci, amet, aspernatur, consequatur
-                        corporis excepturi explicabo maiores numquam officiis perferendis praesentium saepe soluta tenetur
-                        velit. Dolores eos ipsa neque sint temporibus!</p>
+                    <!--<h1>-->
+                        <!--Article Header-->
+                    <!--</h1>-->
+                    <!--<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci, amet, aspernatur, consequatur-->
+                        <!--corporis excepturi explicabo maiores numquam officiis perferendis praesentium saepe soluta tenetur-->
+                        <!--velit. Dolores eos ipsa neque sint temporibus!</p>-->
                 </article>
                 <article id="article-2">
-                    <h1>
-                        Article Header
-                    </h1>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci, amet, aspernatur, consequatur
-                        corporis excepturi explicabo maiores numquam officiis perferendis praesentium saepe soluta tenetur
-                        velit. Dolores eos ipsa neque sint temporibus!</p>
+                    <!--<h1>-->
+                        <!--Article Header-->
+                    <!--</h1>-->
+                    <!--<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci, amet, aspernatur, consequatur-->
+                        <!--corporis excepturi explicabo maiores numquam officiis perferendis praesentium saepe soluta tenetur-->
+                        <!--velit. Dolores eos ipsa neque sint temporibus!</p>-->
                 </article>
                 <article id="article-3">
-                    <h1>
-                        Article Header
-                    </h1>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci, amet, aspernatur, consequatur
-                        corporis excepturi explicabo maiores numquam officiis perferendis praesentium saepe soluta tenetur
-                        velit. Dolores eos ipsa neque sint temporibus!</p>
+                    <!--<h1>-->
+                        <!--Article Header-->
+                    <!--</h1>-->
+                    <!--<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci, amet, aspernatur, consequatur-->
+                        <!--corporis excepturi explicabo maiores numquam officiis perferendis praesentium saepe soluta tenetur-->
+                        <!--velit. Dolores eos ipsa neque sint temporibus!</p>-->
                 </article>
                 <article id="article-4">
-                    <h1>
-                        Article Header
-                    </h1>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci, amet, aspernatur, consequatur
-                        corporis excepturi explicabo maiores numquam officiis perferendis praesentium saepe soluta tenetur
-                        velit. Dolores eos ipsa neque sint temporibus!</p>
+                    <!--<h1>-->
+                        <!--Article Header-->
+                    <!--</h1>-->
+                    <!--<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci, amet, aspernatur, consequatur-->
+                        <!--corporis excepturi explicabo maiores numquam officiis perferendis praesentium saepe soluta tenetur-->
+                        <!--velit. Dolores eos ipsa neque sint temporibus!</p>-->
                 </article>
             </div>
         </section>
