--- a/index.html
+++ b/index.html
@@ -38,62 +38,104 @@
             </div>
         </section>
         <section class="wrapper">
-            <div class="flex-container flex-wrap">
+            <div class="flex-container flex-wrap featured-articles">
                 <article id="article-1">
                     <!--<h1>-->
-                        <!--Article Header-->
+                    <!--Article Header-->
                     <!--</h1>-->
                     <!--<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci, amet, aspernatur, consequatur-->
-                        <!--corporis excepturi explicabo maiores numquam officiis perferendis praesentium saepe soluta tenetur-->
-                        <!--velit. Dolores eos ipsa neque sint temporibus!</p>-->
+                    <!--corporis excepturi explicabo maiores numquam officiis perferendis praesentium saepe soluta tenetur-->
+                    <!--velit. Dolores eos ipsa neque sint temporibus!</p>-->
                 </article>
                 <article id="article-2">
                     <!--<h1>-->
-                        <!--Article Header-->
+                    <!--Article Header-->
                     <!--</h1>-->
                     <!--<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci, amet, aspernatur, consequatur-->
-                        <!--corporis excepturi explicabo maiores numquam officiis perferendis praesentium saepe soluta tenetur-->
-                        <!--velit. Dolores eos ipsa neque sint temporibus!</p>-->
+                    <!--corporis excepturi explicabo maiores numquam officiis perferendis praesentium saepe soluta tenetur-->
+                    <!--velit. Dolores eos ipsa neque sint temporibus!</p>-->
                 </article>
                 <article id="article-3">
                     <!--<h1>-->
-                        <!--Article Header-->
+                    <!--Article Header-->
                     <!--</h1>-->
                     <!--<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci, amet, aspernatur, consequatur-->
-                        <!--corporis excepturi explicabo maiores numquam officiis perferendis praesentium saepe soluta tenetur-->
-                        <!--velit. Dolores eos ipsa neque sint temporibus!</p>-->
+                    <!--corporis excepturi explicabo maiores numquam officiis perferendis praesentium saepe soluta tenetur-->
+                    <!--velit. Dolores eos ipsa neque sint temporibus!</p>-->
                 </article>
                 <article id="article-4">
                     <!--<h1>-->
-                        <!--Article Header-->
+                    <!--Article Header-->
                     <!--</h1>-->
                     <!--<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci, amet, aspernatur, consequatur-->
-                        <!--corporis excepturi explicabo maiores numquam officiis perferendis praesentium saepe soluta tenetur-->
-                        <!--velit. Dolores eos ipsa neque sint temporibus!</p>-->
+                    <!--corporis excepturi explicabo maiores numquam officiis perferendis praesentium saepe soluta tenetur-->
+                    <!--velit. Dolores eos ipsa neque sint temporibus!</p>-->
                 </article>
             </div>
         </section>
         <section class="module content">
-            <div class="container">
-                <h2>Lorem Ipsum Dolor</h2>
+            <div class="container blog-articles">
+                <article>
+                    <h1>
+                        Article Header
+                    </h1>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci, amet, aspernatur, consequatur
+                        corporis excepturi explicabo maiores numquam officiis perferendis praesentium saepe soluta
+                        tenetur
+                        velit. Dolores eos ipsa neque sint temporibus!</p>
+                </article>
+                <article>
+                    <h1>
+                        Article Header
+                    </h1>
 
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus aspernatur assumenda, aut beatae
-                    ducimus eum fugiat, id impedit minus quos rerum tenetur unde veniam! Amet libero molestiae numquam
-                    voluptate voluptates.</p>
-
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut beatae consectetur consequuntur dolor
-                    dolorem eligendi harum ipsum labore natus neque nulla, obcaecati odit officiis omnis placeat quasi
-                    rem vel voluptatum!</p>
-
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. At, dolores enim, esse eveniet excepturi
-                    labore nobis provident quibusdam quidem quis reiciendis repellendus, reprehenderit rerum suscipit
-                    vitae voluptatem voluptates. Culpa, quaerat?</p>
-
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad adipisci asperiores cum debitis
-                    dignissimos dolores, dolorum esse excepturi impedit inventore minus obcaecati perferendis quasi
-                    recusandae sequi sunt suscipit totam veniam!</p>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus aspernatur assumenda, aut
+                        beatae
+                        ducimus eum fugiat, id impedit minus quos rerum tenetur unde veniam! Amet libero molestiae
+                        numquam
+                        voluptate voluptates.</p>
+                </article>
+                <article>
+                    <h1>
+                        Article Header
+                    </h1>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut beatae consectetur consequuntur
+                        dolor
+                        dolorem eligendi harum ipsum labore natus neque nulla, obcaecati odit officiis omnis placeat
+                        quasi
+                        rem vel voluptatum!</p>
+                </article>
+                <article>
+                    <h1>
+                        Article Header
+                    </h1>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. At, dolores enim, esse eveniet
+                        excepturi
+                        labore nobis provident quibusdam quidem quis reiciendis repellendus, reprehenderit rerum
+                        suscipit
+                        vitae voluptatem voluptates. Culpa, quaerat?</p>
+                </article>
+                <article>
+                    <h1>
+                        Article Header
+                    </h1>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad adipisci asperiores cum debitis
+                        dignissimos dolores, dolorum esse excepturi impedit inventore minus obcaecati perferendis quasi
+                        recusandae sequi sunt suscipit totam veniam!</p>
+                </article>
+                <article>
+                    <h1>
+                        Article Header
+                    </h1>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad adipisci asperiores cum debitis
+                        dignissimos dolores, dolorum esse excepturi impedit inventore minus obcaecati perferendis quasi
+                        recusandae sequi sunt suscipit totam veniam!</p>
+                </article>
             </div>
         </section>
+        <footer>
+            Footer
+        </footer>
     </main>
 </div>
 </body>
