--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
             </div>
         </section>
         <footer>
-            Footer
+            Copyright © www.BoisclairCalifornia.com 2015 · Built for CIT-85
         </footer>
     </main>
 </div>
