--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
     <main>
         <section class="module parallax parallax-1">
             <div class="container">
+                <h1>Hello World</h1>
             </div>
         </section>
         <section class="module content">
